syntax = "proto3";

import "spiderrock_common.proto";


package spiderrock.protobuf;

import "google/protobuf/timestamp.proto";

    
message LiveImpliedQuoteDisp {
    message PKey {
        
        OptionKey okey = 10;
    }


    MessageMetadata _meta = 1;
    
    PKey pkey = 2;
    TickerKey ticker = 100; // SR Ticker that this option rolls up to (LiveImpliedQuote)
    float u_prc = 101; // underlier price (usually mid-market) LiveImpliedQuote
    float cls_bid_iv = 102; // OptionCloseMark.bidIV
    float cls_ask_iv = 103; // OptionCloseMark.AskIv
    float cls_mid_vol = 104;
    float cls_sr_vol = 105; // Previous close SrVol from OptionCloseMark.srVol
    float o_bid_iv = 106; // volatility implied by option bid price from LiveImpliedQuote
    float o_ask_iv = 107; // volatility implied by option ask price from LiveImpliedQuote
    float mid_vol = 108; // mid-market vol, if oBidIv is -1, midVol is AVG(0, oAskIv), if oAskIv is -1, midVol is 0
    float s_vol = 109; // option surface volatility (SR surface fit model) from LiveImpliedQuote
    float s_prc = 110; // option surface price; ie. PRICE(sVol, uPrc + uOff, years, rate, sDiv, {discrete dividends, if any}) from LiveImpliedQuote
    float prt_prc = 111; // Last Print Price (from OptionPrint)
    float surf_vol = 112; // SR surface volatility from OptionPrintSet (at time of print)
    int32 prt_volume = 113; // day print volume in contracts from OptionPrintSet
    float prt_iV = 114; // print implied volatility
    float de = 115; // option delta
    float ga = 116; // option gamma
    float th = 117; // option theta
    float ve = 118; // option vega
    float va = 119; // option vanna
    float vo = 120; // option volga
    float ro = 121; // option rho
    float ph = 122; // option phi
    ImpliedQuoteError calc_err = 123; // option pricing calculation error (if any)
    CalcSource calc_source = 124;
    int64 src_timestamp = 125; // OPRA source timestamp (nanoseconds since epoch); will be zero if calcSource != Tick
    int64 net_timestamp = 126; // SR timestamp @ publish time
    google.protobuf.Timestamp timestamp = 127;
}


